--- a/logistics/test/green.html
+++ b/logistics/test/green.html
@@ -150,7 +150,7 @@
         <div class="row">
           <div class="col-md-10 col-lg-8 col-xl-7 col-xxl-6 mx-auto">
             <h1 class="display-1 text-white mb-3">Go Green</h1>
-            <p class="lead fs-lg px-md-3 px-lg-7 px-xl-9 px-xxl-10">We are committed to minimizing our environmental impact across all aspects of our operations. This includes optimizing our supply chain processes to reduce energy consumption, minimizing waste, and promoting the use of sustainable resources.</p>
+            <p class="lead fs-lg px-md-3 px-lg-7 px-xl-9 px-xxl-10">We are committed to minimizing our environmental impact across all aspects of our operations.</p>
           </div>
           <!-- /column -->
         </div>
@@ -169,7 +169,7 @@
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/check-2.svg" class="svg-inject icon-svg icon-svg-md text-yellow mb-3" alt="" />
                     <h4>Comprehensive Environmental Strategy</h4>
-                    <p class="mb-0">By investing in energy-efficient technologies and practices, we significantly lower our carbon footprint, ensuring that our logistics solutions are not only effective but also environmentally responsible.</p>
+                    <p class="mb-0">By investing in energy-efficient practices, we significantly lower our carbon footprint, ensuring that our logistics solutions are not only effective but also environmentally responsible.</p>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -181,7 +181,7 @@
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/shield.svg" class="svg-inject icon-svg icon-svg-md text-red mb-3" alt="" />
                     <h4>Educating and Empowering Our Stakeholders</h4>
-                    <p class="mb-0">By working closely with industry leaders, environmental organizations, and governments, we contribute to the development and implementation of innovative solutions to address climate change challenges.</p>
+                    <p class="mb-0">By working closely with industry leaders and environmental organizations, we contribute to the development of innovative solutions to address climate change challenges.</p>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -193,7 +193,7 @@
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/discount-tag.svg" class="svg-inject icon-svg icon-svg-md text-leaf mb-3" alt="" />
                     <h4>Reducing Carbon Emissions</h4>
-                    <p class="mb-0">We prioritize the use of eco-friendly transportation methods, such as hybrid and electric vehicles, and collaborate with carriers who share our commitment to reducing greenhouse gas emissions.</p>
+                    <p class="mb-0">We prioritize the use of eco-friendly transportation methods and collaborate with carriers who share our commitment to reducing greenhouse gas emissions.</p>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -205,8 +205,8 @@
                   <div class="card-body">
                     <img src="./assets/img/icons/lineal/earth.svg" class="svg-inject icon-svg icon-svg-md text-primary mb-3" alt="" />
                     <h4>Active Participation in Climate Change Initiatives</h4>
-                    <p class="mb-0">Through our partnership with Evertreen, we actively participate in reforestation projects that absorb CO2 from the atmosphere, directly contributing to the fight against climate change.
-                      We invest in renewable energy projects and encourage the adoption of green energy solutions within our operations and by our partners, helping to drive the transition to a low-carbon economy.</p>
+                    <p class="mb-0">Through our partnership with Evertreen, we actively participate in reforestation projects that absorb CO2 from the atmosphere.
+                      We invest in renewable energy projects and encourage the adoption of green energy solutions.</p>
                   </div>
                   <!--/.card-body -->
                 </div>
@@ -219,8 +219,7 @@
           <!--/column -->
           <div class="col-lg-5">
             <h2 class="fs-15 text-uppercase text-muted mb-3">How We Care for the Environment and Combat Climate Change</h2>
-            <h3 class="display-4 mb-5">We are committed to minimizing our environmental impact across all aspects of our operations. This includes optimizing our supply chain processes to reduce energy consumption, minimizing waste, and promoting the use of sustainable resources..</h3>
-            <p>We are dedicated to educating our clients, employees, and partners on the importance of sustainability and climate action. We provide resources and guidance on how they can reduce their environmental impact and support global climate goals..</p>
+            <h3 class="display-4 mb-5">We are committed to minimizing our environmental impact across all aspects of our operations. This includes optimizing our supply chain processes to reduce energy consumption and promoting the use of sustainable resources.</h3>
           </div>
           <!--/column -->
         </div>
