--- a/logistics/test/technology.html
+++ b/logistics/test/technology.html
@@ -177,21 +177,21 @@
               <div><img src="./assets/img/icons/lineal/rocket.svg" class="svg-inject icon-svg icon-svg-md text-yellow me-4" alt="" /></div>
               <div>
                 <h4 class="mb-1">Easy Usage</h4>
-                <p>This platform ensures quick onboarding and minimal training, allowing companies to efficiently manage all the shipments data without technical expertise. This user-friendly interface increases adoption rates and streamlines daily operations, saving time and reducing errors.</p>
+                <p>This platform ensures quick onboarding and minimal training, allowing our clients to efficiently manage all the shipments data. Our user-friendly interface save time and reduce errors.</p>
               </div>
             </a> </li>
           <li class="nav-item"> <a class="nav-link d-flex flex-row" data-bs-toggle="tab" href="#tab2-2">
               <div><img src="./assets/img/icons/lineal/earth.svg" class="svg-inject icon-svg icon-svg-md text-green me-4" alt="" /></div>
               <div>
                 <h4 class="mb-1">Tracking</h4>
-                <p>Using our platform for cargo tracking provides real-time visibility and updates, enhancing efficiency and reducing delays. It also streamlines communication and documentation, leading to improved accuracy and customer satisfaction.</p>
+                <p>Our platform for cargo tracking provides real-time visibility and updates. It also streamlines communication and documentation, leading to improved accuracy and customer satisfaction.</p>
               </div>
             </a> </li>
           <li class="nav-item"> <a class="nav-link d-flex flex-row" data-bs-toggle="tab" href="#tab2-3">
               <div><img src="./assets/img/icons/lineal/calculator.svg" class="svg-inject icon-svg icon-svg-md text-red me-4" alt="" /></div>
               <div>
                 <h4 class="mb-1">Reduce Costs</h4>
-                <p>Our technology help to reduces costs by minimizing delays, preventing lost shipments, and optimizing route planning. Clients can avoid unnecessary expenses, such as demurrage fees or expedited shipping, by having real-time insights into their cargo's location and status.</p>
+                <p>Our technology help to reduces costs by minimizing errors, and optimizing time. Clients can avoid unnecessary expenses, such as demurrage fees or expedited shipping, by having real-time insights into their cargo's location and status.</p>
               </div>
             </a> </li>
         </ul>
@@ -216,11 +216,11 @@
               <!--/column -->
               <div class="col-lg-6">
                 <h2 class="mb-3">Easy Usage</h2>
-                <p>The platform's intuitive design allows users to navigate and access essential features with minimal effort, reducing the need for extensive training. Its straightforward interface enables quick data entry, real-time tracking, and easy report generation. This simplicity ensures that both tech-savvy and non-technical users can efficiently manage their shipments, leading to faster adoption and smoother operations.</p>
+                <p>Our platform's intuitive design allows users to navigate and access essential features with minimal effort, reducing the need for extensive training. Its straightforward interface, real-time tracking, and easy report generation. This simplicity ensures that both tech-savvy and non-technical users can efficiently manage their shipments, leading to faster adoption and smoother operations.</p>
                 <ul class="icon-list bullet-bg bullet-soft-green">
-                  <li><i class="uil uil-check"></i>The platform is designed for easy navigation, allowing users to quickly access and manage key features.</li>
-                  <li><i class="uil uil-check"></i>Minimal training is required, enabling teams to start using the platform efficiently from day one.</li>
-                  <li><i class="uil uil-check"></i>Simplified workflows reduce the chance of errors and save time, improving overall productivity.</li>
+                  <li><i class="uil uil-check"></i>The platform is designed for easy navigation, allowing users to quickly access.</li>
+                  <li><i class="uil uil-check"></i>Minimal training is required, allowing our clients to start using the platform efficiently from day one.</li>
+                  <li><i class="uil uil-check"></i>Reduce the chance of errors and save time, improving overall productivity.</li>
                 </ul>
                 <a href="contact.html" class="btn btn-green mt-2">Do you want to know more?</a>
               </div>
