--- a/logistics/test/Land.html
+++ b/logistics/test/Land.html
@@ -40,7 +40,7 @@
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
@@ -146,8 +146,8 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Inland freight</h1>
-            <p class="lead px-lg-7 px-xl-7 px-xxl-6">Terrestrial freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
+            <h1 class="display-1 mb-3">Road freight</h1>
+            <p class="lead px-lg-7 px-xl-7 px-xxl-6">Road freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
           </div>
           <!-- /column -->
         </div>
@@ -210,7 +210,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Flexibility and Accessibility:</h4>
-                    <p class="mb-0">Inland freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
                   </div>
                 </div>
               </div>
@@ -222,7 +221,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Cost-Effective for Short and Medium Distances</h4>
-                    <p class="mb-0">For shorter and medium distances, inland freight is often the most cost-effective option, especially when considering the lower handling costs and the ability to consolidate shipments.</p>
                   </div>
                 </div>
               </div>
@@ -234,7 +232,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Versatile Transport Options</h4>
-                    <p class="mb-0">Inland freight can handle a wide range of cargo types, from small parcels to oversized loads, and offers different vehicle types, such as trucks, trailers, and vans, to suit specific shipping needs</p>
                   </div>
                 </div>
               </div>
@@ -246,7 +243,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Types of Inland Freight Services</h4>
-                    <p class="mb-0">Full Truckload (FTL), Less than Truckload (LTL), Intermodal Transportation.</p>
                   </div>
                 </div>
               </div>
