--- a/logistics/test/Ocean.html
+++ b/logistics/test/Ocean.html
@@ -41,7 +41,7 @@
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
 
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
@@ -149,7 +149,7 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Ocean Freights</h1>
+            <h1 class="display-1 mb-3">Ocean Freight</h1>
             <p class="lead px-lg-7 px-xl-7 px-xxl-6">Ocean freight, or maritime transport, is one of the most common and cost-effective methods for transporting large quantities of goods over long distances.</p>
           </div>
           <!-- /column -->
@@ -213,7 +213,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Cost-Effective</h4>
-                    <p class="mb-0">is the most economical option for shipping large quantities of goods, especially for bulky or heavy items. The cost per unit is generally lower compared to air freight, making it ideal for high-volume shipments.</p>
                   </div>
                 </div>
               </div>
@@ -225,7 +224,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Global Reach</h4>
-                    <p class="mb-0">With access to virtually every major port in the world, ocean freight enables businesses to reach international markets and distribute their products globally.</p>
                   </div>
                 </div>
               </div>
@@ -237,7 +235,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Versatile Shipping Options</h4>
-                    <p class="mb-0">Ocean freight offers flexible options such as Full Container Load (FCL) and Less than Container Load (LCL), allowing businesses to choose the most suitable arrangement based on their shipment size and budget.</p>
                   </div>
                 </div>
               </div>
@@ -249,7 +246,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Environmental Impact</h4>
-                    <p class="mb-0">While ocean freight is more fuel-efficient per ton of cargo compared to other modes of transport, it still has an environmental impact. However, ongoing advancements in shipping technology are helping to reduce emissions and promote more sustainable practices.</p>
                   </div>
                 </div>
               </div>
