--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -40,7 +40,7 @@
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
 
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
