arreglos que vimos con Nico

--- a/logistics/test/Air.html
+++ b/logistics/test/Air.html
@@ -147,7 +147,7 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Air Freights</h1>
+            <h1 class="display-1 mb-3">Air Freight</h1>
             <p class="lead px-lg-7 px-xl-7 px-xxl-6">Air freight, or air cargo, is a fast and reliable method of transporting goods over long distances.</p>
           </div>
           <!-- /column -->
@@ -180,28 +180,17 @@
         <div class="row gx-lg-8 gy-8 mt-5 mt-md-12 mt-lg-0 mb-15 align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="row gx-md-5 gy-5">
-              <div class="col-md-4 offset-md-2 align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/air2.jpg" srcset="./assets/img/photos/air2 2x" alt=""></figure>
+              <div class="align-self-end">
+                <figure class="rounded"><img src="./assets/img/photos/airglobalcargo.png" alt=""></figure>
               </div>
               <!--/column -->
-              <div class="col-md-6 align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/air3.jpg" srcset="./assets/img/photos/air3 2X" alt=""></figure>
-              </div>
-              <!--/column -->
-              <div class="col-md-6 offset-md-1">
-                <figure class="rounded"><img src="./assets/img/photos/air4.jpg" srcset="./assets/img/photos/air4.jpg 2x" alt=""></figure>
-              </div>
-              <!--/column -->
-              <div class="col-md-4 align-self-start">
-                <figure class="rounded"><img src="./assets/img/photos/air1.jpg" srcset="./assets/img/photos/ait1.jpg 2x" alt=""></figure>
-              </div>
               <!--/column -->
             </div>
             <!--/.row -->
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="display-4 mb-3">Key Advantages of Air Freight</h2>
+            <h2 class="mb-1">Key Advantages of Air Freight</h2>
             <p class="lead fs-lg mb-8 pe-xxl-2">Speed and Efficiency</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
@@ -211,7 +200,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Speed and Efficiency</h4>
-                    <p class="mb-0">Air freight is the fastest mode of transportation, making it ideal for time-sensitive shipments. It significantly reduces transit times, enabling businesses to meet tight deadlines and respond quickly to market demands.</p>
                   </div>
                 </div>
               </div>
@@ -223,7 +211,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Global Reach</h4>
-                    <p class="mb-0">With access to a vast network of international airports, air freight provides unparalleled global reach, allowing businesses to connect with markets across the world in a matter of days.</p>
                   </div>
                 </div>
               </div>
@@ -235,7 +222,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">High Security and Reliability:</h4>
-                    <p class="mb-0">Due to strict security protocols and handling procedures, air freight offers a higher level of protection for valuable and fragile goods. The controlled environment and advanced tracking systems ensure reliable and secure delivery.</p>
                   </div>
                 </div>
               </div>
@@ -247,7 +233,6 @@
                   </div>
                   <div>
                     <h4 class="mb-1">Digitalization</h4>
-                    <p class="mb-0">The air freight industry is increasingly embracing digital technologies to improve efficiency, transparency, and customer service. Innovations like e-freight (electronic freight documentation), real-time tracking, and automated processes are transforming the industry.</p>
                   </div>
                 </div>
               </div>
