--- a/logistics/test/Ocean.html
+++ b/logistics/test/Ocean.html
@@ -182,28 +182,18 @@
         <div class="row gx-lg-8 gy-8 mt-5 mt-md-12 mt-lg-0 mb-15 align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="row gx-md-5 gy-5">
-              <div class="col-md-4 offset-md-2 align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/oceanfreights3.jpg" srcset="./assets/img/photos/oceanfreights3.jpg 2x" alt=""></figure>
+              <div class="align-self-end">
+                <figure class="rounded"><img src="./assets/img/photos/ocean_routes.png" alt=""></figure>
               </div>
               <!--/column -->
-              <div class="col-md-6 align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/oceanfreights4.jpg" srcset="./assets/img/photos/oceanfreights4.jpg" alt=""></figure>
-              </div>
-              <!--/column -->
-              <div class="col-md-6 offset-md-1">
-                <figure class="rounded"><img src="./assets/img/photos/oceanfreights5.jpg" srcset="./assets/img/photos/oceanfreights5.jpg 2x" alt=""></figure>
-              </div>
-              <!--/column -->
-              <div class="col-md-4 align-self-start">
-                <figure class="rounded"><img src="./assets/img/photos/oceanfreights6.jpg" srcset="./assets/img/photos/oceanfreights6.jpg 2x" alt=""></figure>
-              </div>
+              
               <!--/column -->
             </div>
             <!--/.row -->
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="display-4 mb-3">Key Advantages of Ocean Freight</h2>
+            <h2 class="mb-1">Key Advantages of Ocean Freight</h2>
             <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Large Volumes</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
