--- a/logistics/test/container.html
+++ b/logistics/test/container.html
@@ -199,7 +199,7 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="display-4 mb-3">Key Advantages of using containers for domestic purposes</h2>
+            <h2 class="mb-1">Key Advantages of using containers for domestic purposes</h2>
             <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective, Durability, Sustainability, Flexibility and Customization</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
