--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -246,42 +246,8 @@
             <!-- /column -->
           </div>
           <!-- /.row -->
-          <hr class="dark my-14 my-md-17" />
-          <div class="row gx-lg-8 gx-xl-12 gy-10 mb-15 mb-md-17 align-items-center">
-            <div class="col-lg-7">
-              <figure><img class="w-auto" src="./assets/img/illustrations/avion2.jpg" srcset="./assets/img/illustrations/avion2.jpg 2x" alt="" /></figure>
-            </div>
-            <!--/column -->
-            <div class="col-lg-5">
-              <h3 class="fs-16 text-uppercase text-muted mb-3">What we do?</h3>
-              <h3 class="display-4 mb-6">LOGISTICS AND TRANSPORTATION / SERVICES.</h3>
-              <div class="row gy-4">
-                <div class="col-md-6">
-                  <h4><span class="text-primary">1.</span> OCEAN FREIGHTS, FULL & CONSOLIDATED</h4>
-                  <p class="mb-0">We have a reliable network of experienced international agents for the coordination of our ocean shipments, both for FCL and LCL cargo which allows us to participate in most ocean services, being market leader in many of them.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4><span class="text-primary">2.</span> AIR FREIGHTS</h4>
-                  <p class="mb-0">All destinations and all origins covered with the invaluable support from our Operations Center at Carrasco International Airport in Montevideo.  We offer our services and advice for the handling and packaging of all kinds of goods.</p>
-                </div>
-                <div class="col-md-6">
-                  <h4><span class="text-primary">3.</span> INLAND FREIGHTS</h4>
-                  <p class="mb-0">Regarding domestic transport, we coordinate and pick up the cargo, in the case of exports, or deliver it, in the case of imports, from / at the address indicated by the client.
-                    .</p>
-                </div>
-
-
-                <div class="col-md-6">
-                  <h4><span class="text-primary">4.</span> CARGO INSURANCE</h4>
-                  <p class="mb-0">We offer the best insurance coverage for intermodal transportation.</p>
-                </div>
-                <!--/column -->
-              </div>
-              <!--/.row -->
-            </div>
-            <!--/column -->
-          </div>
-          <!--/.row -->
+          <hr class="dark my-14 my-md-17" /> 
+         <!--/.row -->
           <div class="row gx-lg-8 gx-xl-12 gy-10">
             <div class="col-lg-7 order-lg-2">
               <figure><img class="w-auto" src="./assets/img/photos/oceanfreights5.jpg" srcset="./assets/img/photos/oceanfreights5.jpg 2x" alt="" /></figure>
@@ -293,13 +259,11 @@
               <div class="accordion accordion-wrapper" id="accordionExample">
                 <div class="card plain accordion-item">
                   <div class="card-header" id="headingOne">
-                    <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> LOGISTICS FOR
-                      AGRO INDUSTRIES </button>
+                    <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">- Exceptional Customer Service </button>
                   </div>
                   <!--/.card-header -->
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="card-body">
-                      <p>Due to the new technological and logistical challenges that have arisen in the 21st century for the agribusiness, we are now providing logistics and innovative solutions for the agricultural industries. From machinery imports to commodities exports, REPREMAR Logistics covers the whole range of necessary services for today’s rural producers and agricultural companies.</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -308,12 +272,11 @@
                 <!--/.accordion-item -->
                 <div class="card plain accordion-item">
                   <div class="card-header" id="headingTwo">
-                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> PROJECT CARGO </button>
+                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">- Proven Quality and Reliability </button>
                   </div>
                   <!--/.card-header -->
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="card-body">
-                      <p>We ship cargo from suppliers around the globe and we deliver it at construction sites in any part of the world. We handle any kind of shipment that might be part of a project, from LCLs and FCLs to break-bulk parts needing special handling. Our staff has experts in vessel chartering, heavy-load handling, trucking and project management. The evidence relies in having successfully accomplished the largest logistical project and investment in Uruguay’s history..</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -322,26 +285,12 @@
                 <!--/.accordion-item -->
                 <div class="card plain accordion-item">
                   <div class="card-header" id="headingThree">
-                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> SPECIAL SERVICES </button>
+                    <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">- Cutting-Edge Technology </button>
                   </div>
                   <!--/.card-header -->
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="card-body">
-                      <p>- Advice on Foreign Trade and Logistics
-                        <br>- Transits to Brazil, Argentina and Paraguay
-                        <br>- Special packaging and packing with our stevedoring staff trained for the correct handling of the most varied products
-                        <br>- International Removals
-                        <br>- Quality control of products of origin
-                        <br>- Consolidation at origin of merchandise, in the same container from different suppliers, even from different countries, for the same consignee.
-                       <br>- Bulk cargo operations in the warehouse; ship charter.
-                        <br>-  Transport of machinery and vehicles in special equipment, such as flat racks and open tops containers.
-                        <br>-  Transport of live animals.
-                        <br>-  Trading services for the commercialization of products thanks to our extensive network of agents around the world.
-                        <br>-  Sales support for Uruguayan products abroad.
-                        <br>-  In Brazil, tax benefits for imports, which makes Uruguayan exports to that country more competitive.
-                        <br>-  Storage and distribution of merchandise in the south of Brazil
-                        <br>-  We provide a complete customs clearance service. Our dispatchers, with more than 20 years of experience, offer extensive knowledge on the subject that directly results in the efficiency and cost-benefit of all operations.</p>
-                    </div>
+                       </div>
                     <!--/.card-body -->
                   </div>
                   <!--/.accordion-collapse -->
@@ -357,7 +306,7 @@
         <!-- /.container -->
       </section>
       <!-- /section -->
-      
+      <hr>
       <!--/section -->
       <section class="wrapper bg-light">
         <div class="container py-15 py-md-17">
