se sube proyecto de yate

--- a/logistics/test/green.html
+++ b/logistics/test/green.html
@@ -40,13 +40,13 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
                     <ul class="dropdown-menu">
-                      <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./Ocean.html">Ocean</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./Air.html">Air</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./Land.html">Road</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./container.html">Containers</a></li>
 
-                      <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./Project.html">Project Cargo</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./warehouse.html">Warehousing</a></li>
 
                     </ul>
                   </li>
