--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -43,7 +43,7 @@
                     <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
 
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./warehouse.html"">Warehousing</a></li>
 
                   </ul>
                 </li>
