--- a/logistics/test/warehouse.html
+++ b/logistics/test/warehouse.html
@@ -179,7 +179,7 @@
         <div class="row gx-lg-8 gy-8 mt-5 mt-md-12 mt-lg-0 mb-15 align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="row gx-md-5 gy-5">
-              <div class="col-md-4 offset-md-2 align-self-end">
+              <div class="align-self-end">
                 <figure class="rounded"><img src="./assets/img/photos/warehouse2.jpg"  alt=""></figure>
               </div>
 
