se arregla footer

--- a/logistics/test/warehouse.html
+++ b/logistics/test/warehouse.html
@@ -263,39 +263,38 @@
                 document.write(new Date().getUTCFullYear());
               </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
-              <!-- /.social -->
-            </div>
-            <!-- /.widget -->
+            <!-- /.social -->
           </div>
-          <!-- /column -->
-          <div class="col-md-4 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-              <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a> 
-            </div>
-            <!-- /.widget -->
-          </div>
-          <!-- /column -->
-          <div class="col-md-4 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Learn More</h4>
-              <ul class="list-unstyled  mb-0">
-                <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="Project.html">Projects</a></li>
-              </ul>
-            </div>
-            <!-- /.widget -->
-          </div>
-          <!-- /column -->
-          
-          <!-- /column -->
+          <!-- /.widget -->
         </div>
-        <!--/.row -->
+        <!-- /column -->
+        <div class="col-md-4 col-lg-3">
+          <div class="widget">
+            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+            <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
+            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
+          </div>
+          <!-- /.widget -->
+        </div>
+        <!-- /column -->
+        <div class="col-md-4 col-lg-3">
+          <div class="widget">
+            <h4 class="widget-title text-white mb-3">Learn More</h4>
+            <ul class="list-unstyled  mb-0">
+              <li><a href="aboutLogistics.html">About Us</a></li>
+              <li><a href="Project.html">Projects</a></li>
+            </ul>
+          </div>
+          <!-- /.widget -->
+        </div>
+        <!-- /column -->
+        
+        <!-- /column -->
       </div>
+      <!--/.row -->
     </div>
     <!-- /.container -->
   </footer>
