--- a/logistics/test/Land.html
+++ b/logistics/test/Land.html
@@ -200,7 +200,7 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="mb-1">Key Advantages of Inland Freight</h2>
+            <h2 class="mb-1">Key Advantages of Road Freight</h2>
             <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Short and Medium Distances</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
