--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -183,6 +183,17 @@
                         <div class="invalid-feedback"> Please select a department. </div>
                       </div>
                     </div>
+                    <div class="col-md-6">
+                      <div class="form-select-wrapper mb-4">
+                        <select class="form-select" id="form-select" name="department" required>
+                          <option selected disabled value="">Select a Country</option>
+                          <option value="Sales">Uruguay</option>
+                          <option value="Marketing">Paraguay</option>
+                        </select>
+                        <div class="valid-feedback"> Looks good! </div>
+                        <div class="invalid-feedback"> Please select a country. </div>
+                      </div>
+                    </div>
                     <!-- /column -->
                     <div class="col-12">
                       <div class="form-floating mb-4">
@@ -211,7 +222,7 @@
                     <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
                   </div>
                   <div>
-                    <h5 class="mb-1">Address</h5>
+                    <h5 class="mb-1">Our Offices:</h5>
                     <br>
                     <address> - Uruguay, Montevideo, Misiones 1372, 6th Floor</address>
 
@@ -235,7 +246,9 @@
                   </div>
                   <div>
                     <h5 class="mb-1">E-mail</h5>
-                    <p class="mb-0"><a href="mailto:info.logistics@repremar.com" class="link-body">info.logistics@repremar.com</a></p>
+                    <p class="mb-0"><a href="mailto:info.logistics@repremar.com" class="link-body">Uruguay: info.logistics@repremar.com</a></p>
+                   <br>
+                    <p class="mb-0"><a href="mailto:info.logistics@repremar.com" class="link-body">Paraguay: comercialpy@repremar.com</a></p>
 
                   </div>
                 </div>
