--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <script src=”https://www.google.com/recaptcha/api.js” async defer></script>
 </head>
 
 <body>
@@ -185,7 +186,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="form-select-wrapper mb-4">
-                        <select class="form-select" id="form-select" name="department" required>
+                        <select class="form-select" id="form-select" name="country" required>
                           <option selected disabled value="">Select a Country</option>
                           <option value="Sales">Uruguay</option>
                           <option value="Marketing">Paraguay</option>
@@ -203,6 +204,21 @@
                         <div class="invalid-feedback"> Please enter your messsage. </div>
                       </div>
                     </div>
+
+                    <div class="col-12">
+                      <script src="https://www.google.com/recaptcha/api.js"></script>
+                      <div class="form-group">
+                        <input class="form-control d-none" data-recaptcha="true" required>
+                        <div class="g-recaptcha" data-sitekey="6LeLlkAqAAAAABy_1Ieb-mhEwGgdFgo3C5lH7_YN" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
+                        <div class="valid-feedback">
+                          Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                          Please complete the Captcha
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /column -->
                     <!-- /column -->
                     <!-- /column -->
                     <div class="col-12">
@@ -211,6 +227,7 @@
                     </div>
                     <!-- /column -->
                   </div>
+                  
                   <!-- /.row -->
                 </form>
                 <!-- /form -->
