--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -174,11 +174,12 @@
                     <!-- /column -->
                     <div class="col-md-6">
                       <div class="form-select-wrapper mb-4">
-                        <select class="form-select" id="form-select" name="department" required>
-                          <option selected disabled value="">Select a department</option>
-                          <option value="Sales">Impo</option>
-                          <option value="Marketing">Expo</option>
-                          <option value="Customer Support">Projects</option>
+                        <select class="form-select" id="form-select" name="service" required>
+                          <option selected disabled value="">Select a service</option>
+                          <option value="Ocean">Ocean</option>
+                          <option value="Air">Air</option>
+                          <option value="Road">Road</option>
+                          <option value="project">Project Cargo</option>
                         </select>
                         <div class="valid-feedback"> Looks good! </div>
                         <div class="invalid-feedback"> Please select a department. </div>
