se agrega warehouse

--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -206,7 +206,7 @@
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-truck-loading"></i> </div>
                     <h3 class="fs-22">INFRASTRUCTURE & WAREHOUSING</h3>
                     <p class="mb-2">Focuses on the physical facilities and systems needed to store, manage, and distribute goods efficiently. This includes the construction and maintenance of warehouses, as well as the technology and processes used to ensure safe, organized, and timely storage and retrieval of products.</p>
-                    <a href="https://www.talfir.com.uy" class="more hover link-leaf">Learn More</a>
+                    <a href="./warehouse.html" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
