se sube marketing

--- a/logistics/test/marketing.html
+++ b/logistics/test/marketing.html
@@ -144,9 +144,9 @@
         <div class="row gx-md-8 gy-8">
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
-            <h4>General Presentation</h4>
+            <h4>Presentations</h4>
             <p class="mb-3">PPTX Format.</p>
-            <a href="./marketing/presentations/ENG.pptx" class="more hover link-green">Download</a>
+            <a href="https://repremarlogistic-my.sharepoint.com/:f:/g/personal/naversa_repremar_com/Ev5QJaydtGpHiuXbaudtsKoB1q_i9l_vXDBsKZy8aFSuNg?e=4FyZtn" class="more hover link-green">Download</a>
           </div>
           <!--/column -->
           <div class="col-md-6 col-lg-3">
@@ -167,7 +167,7 @@
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
             <h4>ID Cards</h4>
             <p class="mb-3">AI Format</p>
-            <a href="./marketing/ids/ID_template.ai" class="more hover link-green">Download</a>
+            <a href="https://repremarlogistic-my.sharepoint.com/:f:/g/personal/naversa_repremar_com/EoX_uweJMzNDkqktnDM3668BHT3VIC_bgFSHD21JTj7lZA?e=ipBwXI" class="more hover link-green">Download</a>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
