--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -142,7 +142,7 @@
           <div class="col-xl-10 mx-auto">
             <div class="row gy-10 gx-lg-8 gx-xl-12">
               <div class="col-lg-8">
-                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate data-netlify="true" onsubmit="submit">
+                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate data-netlify="true">
                   <div class="messages"></div>
                   <div class="row gx-4">
                     <div class="col-md-6">
