--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -153,8 +153,8 @@
             <div class="col-lg-8">
               <!--form class="contact-form needs-validation" method="post" name="webLogistics-quote"
                 action="./assets/php/contact.php" novalidate data-netlify="true"-->
-                <form class="contact-form needs-validation" method="post" name="webLogistics-quote"
-                   novalidate data-netlify="true" onsubmit="submit">
+                <form class="contact-form needs-validation" method="POST" name="webLogistics-quote"
+                   data-netlify="true" onsubmit="submit">
                 <div class="messages"></div>
                 <div class="row gx-4">
                   <div class="col-md-6">
