--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -154,7 +154,7 @@
               <!--form class="contact-form needs-validation" method="post" name="webLogistics-quote"
                 action="./assets/php/contact.php" novalidate data-netlify="true"-->
                 <form class="contact-form needs-validation" method="POST" name="webLogistics-quote"
-                   data-netlify="true" onsubmit="submit">
+                   data-netlify="true" onsubmit="submit" action="quote.html">
                 <div class="messages"></div>
                 <div class="row gx-4">
                   <div class="col-md-6">
