--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -142,8 +142,8 @@
           <div class="col-xl-10 mx-auto">
             <div class="row gy-10 gx-lg-8 gx-xl-12">
               <div class="col-lg-8">
-                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate data-netlify="true">
-                  <form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate>
+                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" data-netlify="true" onSubmit="submit">
+                  <!--form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate-->
                   <div class="messages"></div>
                   <div class="row gx-4">
                     <div class="col-md-6">
@@ -207,7 +207,7 @@
                       </div>
                     </div>
 
-                    <div class="col-12">
+                    <!--div class="col-12">
                       <script src="https://www.google.com/recaptcha/api.js"></script>
                       <div class="form-group">
                         <input class="form-control d-none" data-recaptcha="true" required>
@@ -219,13 +219,13 @@
                           Please complete the Captcha
                         </div>
                       </div>
-                    </div>
+                    </div-->
                     <br>
                     <!-- /column -->
                     <!-- /column -->
                     <!-- /column -->
                     <div class="col-12">
-                      <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">
+                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message"></button>
                       <p class="text-muted"><strong>*</strong> These fields are required.</p>
                     </div>
                     <!-- /column -->
