--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -180,7 +180,7 @@
                           <option value="Ocean">Ocean</option>
                           <option value="Air">Air</option>
                           <option value="Road">Road</option>
-                          <option value="project">Project Cargo</option>
+                          <option value="Project Cargo">Project Cargo</option>
                         </select>
                         <div class="valid-feedback"> Looks good! </div>
                         <div class="invalid-feedback"> Please select a department. </div>
@@ -190,8 +190,8 @@
                       <div class="form-select-wrapper mb-4">
                         <select class="form-select" id="form-select" name="country" required>
                           <option selected disabled value="">Select a Country</option>
-                          <option value="Sales">Uruguay</option>
-                          <option value="Marketing">Paraguay</option>
+                          <option value="Uruguay">Uruguay</option>
+                          <option value="Paraguay">Paraguay</option>
                         </select>
                         <div class="valid-feedback"> Looks good! </div>
                         <div class="invalid-feedback"> Please select a country. </div>
@@ -225,7 +225,7 @@
                     <!-- /column -->
                     <!-- /column -->
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message"></button>
+                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">Send Message</button>
                       <p class="text-muted"><strong>*</strong> These fields are required.</p>
                     </div>
                     <!-- /column -->
