--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <script src=”https://www.google.com/recaptcha/api.js” async defer></script>
+  <!--script src=”https://www.google.com/recaptcha/api.js” async defer></script-->
 </head>
 
 <body>
@@ -33,18 +33,18 @@
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./aboutLogistics.html"">About Us</a>
+                  <a class="nav-link" href="./aboutLogistics.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
                   <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Ocean.html">Ocean</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Air.html">Air</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land.html">Road</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container.html">Containers</a></li>
 
-                    <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./warehouse.html"">Warehousing</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Project.html">Project Cargo</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./warehouse.html">Warehousing</a></li>
 
                   </ul>
                 </li>
