--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -142,7 +142,7 @@
           <div class="col-xl-10 mx-auto">
             <div class="row gy-10 gx-lg-8 gx-xl-12">
               <div class="col-lg-8">
-                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" data-netlify="true" onSubmit="submit" action="">
+                <form class="contact-form needs-validation" method="post" name="webLogistics-quote" data-netlify="true" onSubmit="submit">
                   <!--form class="contact-form needs-validation" method="post" name="webLogistics-quote" action="./assets/php/contact.php" novalidate-->
                   <div class="messages"></div>
                   <div class="row gx-4">
@@ -225,7 +225,7 @@
                     <!-- /column -->
                     <!-- /column -->
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">Send Message</button>
+                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3">Send Message</button>
                       <p class="text-muted"><strong>*</strong> These fields are required.</p>
                     </div>
                     <!-- /column -->
