--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <!--script src=”https://www.google.com/recaptcha/api.js” async defer></script-->
+  <script src=”https://www.google.com/recaptcha/api.js” async defer></script>
 </head>
 
 <body>
@@ -207,7 +207,7 @@
                       </div>
                     </div>
 
-                    <!--div class="col-12">
+                    <div class="col-12">
                       <script src="https://www.google.com/recaptcha/api.js"></script>
                       <div class="form-group">
                         <input class="form-control d-none" data-recaptcha="true" required>
@@ -219,7 +219,7 @@
                           Please complete the Captcha
                         </div>
                       </div>
-                    </div-->
+                    </div>
                     <br>
                     <!-- /column -->
                     <!-- /column -->
