--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -49,13 +49,13 @@
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology.html"">Technology</a>
+                  <a class="nav-link" href="./technology.html">Technology</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./green.html"">Go Green</a>
+                  <a class="nav-link" href="./green.html">Go Green</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./contact.html"">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 
                   <!--/.dropdown-menu -->
