--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -208,7 +208,7 @@
                     </div>
                     
                     <div data-netlify-recaptcha="true"></div>
-                    
+
                     <!--div class="col-12">
                       <script src="https://www.google.com/recaptcha/api.js"></script>
                       <div class="form-group">
@@ -227,7 +227,7 @@
                     <!-- /column -->
                     <!-- /column -->
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="submit">Send Message</button>
+                      <button type="submit" class="btn btn-primary rounded-pill btn-send mb-3">Send Message</button>
                       <p class="text-muted"><strong>*</strong> These fields are required.</p>
                     </div>
                     <!-- /column -->
