se sube web grupo nueva y cambios en marketing

--- a/assets/css/index.html
+++ b/assets/css/index.html
@@ -53,7 +53,7 @@ Vegas Slider Images
 =================================-->
 
 <ul class="vegas-slides hidden">
-	<li><img data-fade='2000' src="assets/images/home2.jpg" alt="" /></li>
+	<li><img data-fade='2000' src="assets/images/home.jpg" alt="" /></li>
 </ul>
 
  <!--=================================
