--- a/logistics/test/marketing.html
+++ b/logistics/test/marketing.html
@@ -40,9 +40,8 @@
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
-
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
 
@@ -146,15 +145,10 @@
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
             <h4>Presentations</h4>
             <p class="mb-3">PPTX Format.</p>
-            <a href="https://repremarlogistic-my.sharepoint.com/:f:/g/personal/naversa_repremar_com/Ev5QJaydtGpHiuXbaudtsKoB1q_i9l_vXDBsKZy8aFSuNg?e=4FyZtn" class="more hover link-green">Download</a>
+            <a href="https://repremarlogistic.sharepoint.com/:f:/s/RepremarIT/Esqk5ZRZ6aVEvUvoKGW02Q4BlW1rYRSLkAmat6bbGKltiQ?e=UFlJ8P" class="more hover link-green">Download</a>
           </div>
           <!--/column -->
-          <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
-            <h4>Nautical Presentation</h4>
-            <p class="mb-3">PPTX Format</p>
-            <a href="./marketing/presentations/NauticalEsp.pptx" class="more hover link-green">Download</a>
-          </div>
+          
           <!--/column -->
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
@@ -167,7 +161,7 @@
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
             <h4>ID Cards</h4>
             <p class="mb-3">AI Format</p>
-            <a href="https://repremarlogistic-my.sharepoint.com/:f:/g/personal/naversa_repremar_com/EoX_uweJMzNDkqktnDM3668BHT3VIC_bgFSHD21JTj7lZA?e=ipBwXI" class="more hover link-green">Download</a>
+            <a href="https://repremarlogistic.sharepoint.com/:f:/s/RepremarIT/El5won7ygxZEubZ2DZrErGcBJj7hedQGr6Gkiv-7GtHhvQ?e=apiyF8" class="more hover link-green">Download</a>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
@@ -181,12 +175,7 @@
             <p class="mb-3">Policy pdf</p>
             <a href="./marketing/Politica de Calidad y Seguridad de la cadena de Suministro de Replog.pdf" class="more hover link-green">Download</a>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
-            <h4>Letterhead Document</h4>
-            <p class="mb-3">Pdf and Docx</p>
-            <a href="https://repremarlogistic-my.sharepoint.com/:f:/g/personal/naversa_repremar_com/EsAJYEGninxKj_nDNDJ52MkBoaxqY9LuL5dp0fJ7Tr8eCw?e=6Cau1U" class="more hover link-green">Download</a>
-          </div>
+          
           <!--/column -->
         </div>
         <!--/.row -->
