se sube flete maritimo

--- a/logistics/test/aboutLogistics_es.html
+++ b/logistics/test/aboutLogistics_es.html
@@ -78,14 +78,14 @@
           <div class="navbar-other w-100 d-flex ms-auto">
             <ul class="navbar-nav flex-row align-items-center ms-auto">
               <li class="nav-item dropdown language-select text-uppercase">
-                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
+                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="aboutLogistics_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="aboutLogistics.html">En</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
-                <a href="quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
+                <a href="quote_es.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Cotiza</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
