--- a/logistics/test/Ocean_es.html
+++ b/logistics/test/Ocean_es.html
@@ -34,29 +34,27 @@
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./aboutLogistics.html"">About Us</a>
+                  <a class="nav-link" href="./aboutLogistics_es.html"">Sobre nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Services</a>
+                  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a>
                   <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Road</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
-
-                    <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="./warehouse.html"">Warehousing</a></li>
-
+                    <li class="nav-item"><a class="dropdown-item" href="./Ocean_es.html">Máritimo</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Air_es.html">Aereo</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Land_es.html">Terrestre</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container_es.html">Containers</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./Project_es.html">Carga Proyecto</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./warehouse_es.html">Depósito Fiscal</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./technology.html"">Technology</a>
+                  <a class="nav-link" href="./technology_es.html">Technología</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./green.html"">Go Green</a>
+                  <a class="nav-link" href="./green_es.html">Cambio climático</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link" href="./contact.html"">Contact</a>
+                  <a class="nav-link" href="./contact_es.html">Contacto</a>
                 </li>
                 
                   <!--/.dropdown-menu -->
@@ -65,7 +63,7 @@
               <div class="offcanvas-footer d-lg-none">
                 <div>
                   <a href="mailto:info.logistics@repremar.com" class="link-inverse">info.logistics@repremar.com</a>
-                  <br /> <a href="tel:+59829169416">+598 2916 9416</a> <br />
+                  <br/><a href="tel:+59829169416">+598 2916 9416</a>  <br/>
                   <nav class="nav social social-white mt-4">
                     <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
                     <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
@@ -81,14 +79,14 @@
           <div class="navbar-other w-100 d-flex ms-auto">
             <ul class="navbar-nav flex-row align-items-center ms-auto">
               <li class="nav-item dropdown language-select text-uppercase">
-                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
+                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="Ocean_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="Ocean.html">En</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
-                <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
+                <a href="quote_es.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
@@ -112,26 +110,25 @@
         </div>
         <div class="offcanvas-body pb-6">
           <div class="widget mb-8">
-            <p>LOGISTICS AND TRANSPORTATION / SERVICES.</p>
+            <p>Servicios de transporte y logístics.</p>
            </div>
           <!-- /.widget -->
           <div class="widget mb-8">
-            <h4 class="widget-title text-white mb-3">Contact Info</h4>
+            <h4 class="widget-title text-white mb-3">Contacto</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
             <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /><a href="tel:+59829169416">+598 2916 9416</a>
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
-            <h4 class="widget-title text-white mb-3">Learn More</h4>
+            <h4 class="widget-title text-white mb-3">Saber más</h4>
             <ul class="list-unstyled">
-              <li><a href="aboutLogistics.html">Our Story</a></li>
-              <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="aboutLogistics.html">Sobre Nosotros</a></li>
+              <li><a href="contact.html">Contacto</a></li>
             </ul>
           </div>
           <!-- /.widget -->
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Follow Us</h4>
+            <h4 class="widget-title text-white mb-3">Seguinos</h4>
             <nav class="nav social social-white">
               <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
               <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
@@ -149,8 +146,8 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Ocean Freight</h1>
-            <p class="lead px-lg-7 px-xl-7 px-xxl-6">Ocean freight, or maritime transport, is one of the most common and cost-effective methods for transporting large quantities of goods over long distances.</p>
+            <h1 class="display-1 mb-3">Flete Marítimo</h1>
+            <p class="lead px-lg-7 px-xl-7 px-xxl-6">El flete marítimo, o transporte marítimo, es uno de los métodos más comunes y rentables para transportar grandes cantidades de mercancías a largas distancias.</p>
           </div>
           <!-- /column -->
         </div>
@@ -193,8 +190,8 @@
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="mb-1">Key Advantages of Ocean Freight</h2>
-            <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Large Volumes</p>
+            <h2 class="mb-1">Ventajas Clave del Flete Marítimo</h2>
+            <p class="lead fs-lg mb-8 pe-xxl-2">Rentable para Grandes Volúmenes</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
@@ -202,7 +199,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Cost-Effective</h4>
+                    <h4 class="mb-1">Rentable</h4>
                   </div>
                 </div>
               </div>
@@ -213,7 +210,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-globe"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Global Reach</h4>
+                    <h4 class="mb-1">Alcance Global</h4>
                   </div>
                 </div>
               </div>
@@ -224,7 +221,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-asterisk"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Versatile Shipping Options</h4>
+                    <h4 class="mb-1">Opciones de Envío Versátiles</h4>
                   </div>
                 </div>
               </div>
@@ -235,7 +232,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-temperature"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Environmental Impact</h4>
+                    <h4 class="mb-1">Impacto Ambiental</h4>
                   </div>
                 </div>
               </div>
@@ -246,7 +243,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
+        <a href="quote.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
             
         <!--/.row -->
       </div>
@@ -277,7 +274,7 @@
           <!-- /column -->
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+              <h4 class="widget-title text-white mb-3">Contacto</h4>
               <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
               <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
@@ -286,11 +283,10 @@
           <!-- /column -->
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <h4 class="widget-title text-white mb-3">Learn More</h4>
+              <h4 class="widget-title text-white mb-3">Saber más</h4>
               <ul class="list-unstyled  mb-0">
-                <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="terms.html">Terms of Use</a></li>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="Project_es.html">Proyectos</a></li>
               </ul>
             </div>
             <!-- /.widget -->
