--- a/logistics/test/index_es.html
+++ b/logistics/test/index_es.html
@@ -81,7 +81,7 @@
             <div class="navbar-other w-100 d-flex ms-auto">
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <li class="nav-item dropdown language-select text-uppercase">
-                  <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
+                  <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="index.html">En</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
