subir terrestre y aereo

--- a/logistics/test/index_es.html
+++ b/logistics/test/index_es.html
@@ -41,7 +41,7 @@
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a>
                     <ul class="dropdown-menu">
                       <li class="nav-item"><a class="dropdown-item" href="./Ocean_es.html">Máritimo</a></li>
-                      <li class="nav-item"><a class="dropdown-item" href="./Air_es.html">Aereo</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="./Air_es.html">Aéreo</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./Land_es.html">Terrestre</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./container_es.html">Containers</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./Project_es.html">Carga Proyecto</a></li>
