--- a/logistics/test/Land_es.html
+++ b/logistics/test/Land_es.html
@@ -81,7 +81,7 @@
               <li class="nav-item dropdown language-select text-uppercase">
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="dropdown-item" href="Ocean.html">En</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="Land.html">En</a></li>
                   <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                 </ul>
               </li>
@@ -146,8 +146,8 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Flete Marítimo</h1>
-            <p class="lead px-lg-7 px-xl-7 px-xxl-6">El flete marítimo, o transporte marítimo, es uno de los métodos más comunes y rentables para transportar grandes cantidades de mercancías a largas distancias.</p>
+            <h1 class="display-1 mb-3">Flete Terrestre</h1>
+            <p class="lead px-lg-7 px-xl-7 px-xxl-6">El flete  terrestre ofrece una flexibilidad inigualable, permitiendo servicios de entrega de puerta a puerta. Puede llegar a lugares que no son accesibles por aire o mar, lo que lo convierte en un vínculo crítico en la cadena de suministro.</p>
           </div>
           <!-- /column -->
         </div>
@@ -160,7 +160,7 @@
       <div class="container pb-14 pb-md-16">
         <div class="row mb-8">
           <div class="col-12 mt-n20">
-            <figure class="rounded"><img src="./assets/img/photos/oceanfreights2.jpg" srcset="./assets/img/photos/oceanfreights2.jpg 2x" alt="" /></figure>
+            <figure class="rounded"><img src="./assets/img/photos/land2.jpg" srcset="./assets/img/photos/land2.jpg 2x" alt="" /></figure>
             <div class="row">
               <div class="col-xl-10 mx-auto">
                 <div class="card image-wrapper bg-full bg-image bg-overlay bg-overlay-400 text-white mt-n5 mt-lg-0 mt-lg-n50p mb-lg-n50p border-radius-lg-top" data-image-src="./assets/img/photos/bg3.jpg">
@@ -179,27 +179,37 @@
         <div class="row gx-lg-8 gy-8 mt-5 mt-md-12 mt-lg-0 mb-15 align-items-center">
           <div class="col-lg-6 order-lg-2">
             <div class="row gx-md-5 gy-5">
-              <div class="align-self-end">
-                <figure class="rounded"><img src="./assets/img/photos/ocean_routes.png" alt=""></figure>
+              <div class="col-md-4 offset-md-2 align-self-end">
+                <figure class="rounded"><img src="./assets/img/photos/land.jpg" srcset="./assets/img/photos/land.jpg 2x" alt=""></figure>
               </div>
               <!--/column -->
-              
+              <div class="col-md-6 align-self-end">
+                <figure class="rounded"><img src="./assets/img/photos/land3.jpg" srcset="./assets/img/photos/land3.jpg" alt=""></figure>
+              </div>
+              <!--/column -->
+              <div class="col-md-6 offset-md-1">
+                <figure class="rounded"><img src="./assets/img/photos/land4.jpg" srcset="./assets/img/photos/land4.jpg 2x" alt=""></figure>
+              </div>
+              <!--/column -->
+              <div class="col-md-4 align-self-start">
+                <figure class="rounded"><img src="./assets/img/photos/land2.jpg" srcset="./assets/img/photos/land2.jpg 2x" alt=""></figure>
+              </div>
               <!--/column -->
             </div>
             <!--/.row -->
           </div>
           <!--/column -->
           <div class="col-lg-6">
-            <h2 class="mb-1">Ventajas Clave del Flete Marítimo</h2>
-            <p class="lead fs-lg mb-8 pe-xxl-2">Rentable para Grandes Volúmenes</p>
+            <h2 class="mb-1">Key Advantages of Road Freight</h2>
+            <p class="lead fs-lg mb-8 pe-xxl-2">Cost-Effective for Short and Medium Distances</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-user"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Rentable</h4>
+                    <h4 class="mb-1">Flexibility and Accessibility:</h4>
                   </div>
                 </div>
               </div>
@@ -207,10 +217,10 @@
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-globe"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-usd-circle"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Alcance Global</h4>
+                    <h4 class="mb-1">Cost-Effective for Short and Medium Distances</h4>
                   </div>
                 </div>
               </div>
@@ -221,7 +231,7 @@
                     <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-asterisk"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Opciones de Envío Versátiles</h4>
+                    <h4 class="mb-1">Versatile Transport Options</h4>
                   </div>
                 </div>
               </div>
@@ -229,10 +239,10 @@
               <div class="col-md-6 col-lg-12 col-xl-6">
                 <div class="d-flex flex-row">
                   <div>
-                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-temperature"></i> </div>
+                    <div class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-5"> <i class="uil uil-truck"></i> </div>
                   </div>
                   <div>
-                    <h4 class="mb-1">Impacto Ambiental</h4>
+                    <h4 class="mb-1">Types of Inland Freight Services</h4>
                   </div>
                 </div>
               </div>
@@ -243,7 +253,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <a href="quote.html" class="btn btn-sm btn-primary rounded">Cotiza</a>
+        <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
             
         <!--/.row -->
       </div>
